--- a/templates/edit_post_form.html.jinja2
+++ b/templates/edit_post_form.html.jinja2
@@ -9,7 +9,7 @@
             {{ render_field(form.title) }}
             {{ render_field(form.content) }}
 
-            <input type="submit">
+            <input class="btn btn-primary" type="submit" text="Save">
         </div>
     </form>
 {% endblock %}
