--- a/templates/homepage.html.jinja2
+++ b/templates/homepage.html.jinja2
@@ -3,6 +3,7 @@
 {% block body %}
     <dl>
         {% for post in posts %}
+            <div class="my-3 p-3 bg-white rounded box-shadow">
             <dt><b>{{ post.title }}</b> (edited by {{ post.author.username }})
                 {% if post.author.id == 1 %}
                     <a href="{{ url_for("create_or_process_post", post_id=post.id) }}">edit</a> |
@@ -10,6 +11,7 @@
                 {% endif %}
             </dt>
             <dd>{{ post.content }}</dd>
+            </div>
         {% endfor %}
     </dl>
 {% endblock %}
