--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -2,22 +2,43 @@
 <html>
     <head>
         <title>Micro social network</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+        <style>
+            .container {
+                margin-top: 100px;
+            }
+        </style>
+
     </head>
-    <body>
+    <body class="bg-light">
 
     <header>
-        <div>Micro_social_network:
-            <a href="{{ url_for("index") }}">Home</a> |
-            <a href="{{ url_for("create_or_process_post") }}">Add new post</a>
-        </div>
-        <hr/>
+        <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Micro social network</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for("index") }}">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for("create_or_process_post") }}">Add new post</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
-    <div class="container">
-        <main class="main-content">
+    <main role="main" class="container">
         {% block body %}
         {% endblock %}
-        </main>
-    </div>
+    </main><!-- /.container -->
     </body>
 </html>
