--- a/templates/edit_post_form.html.jinja2
+++ b/templates/edit_post_form.html.jinja2
@@ -3,4 +3,14 @@
 
 
 {% block body %}
+    <form action="{{ url_for("create_or_process_post", post_id=post.id) }}" method="post">
+        {{ form.hidden_tag() }}
+
+        <div class="form-group">
+            {{ render_field(form.title) }}
+            {{ render_field(form.content) }}
+
+            <input type="submit">
+        </div>
+    </form>
 {% endblock %}
