remove code so that students can start from this archive

--- a/templates/template_a.html.jinja2
+++ b/templates/template_a.html.jinja2
@@ -1,7 +1,23 @@
-{% extends "layout.html.jinja2" %}
-{% set title = "template A" %}
-{% set active_page = "view_a" %}
-
-{% block body %}
-    <p>Template a</p>
-{% endblock %}
+<html>
+    <head>
+        <title>{{ title }}</title>
+        <style>
+            .active {
+                font-weight: bold;
+            }
+        </style>
+    </head>
+    <body>
+    <header>
+        <a href="/view/a" class="active">Template A</a> |
+        <a href="/view/b">Template B</a> |
+        <a href="/view/c">Template C</a>
+        <hr>
+    </header>
+    Template a
+    <footer>
+        <hr>
+        Flask SAR - 2019
+    </footer>
+    </body>
+</html>
