--- a/templates/template_b.html.jinja2
+++ b/templates/template_b.html.jinja2
@@ -3,6 +3,7 @@
         <title>{{ title }}</title>
         <style>
             .active {
+                color: red;
                 font-weight: bold;
             }
         </style>
