--- a/templates/static_resources.html.jinja2
+++ b/templates/static_resources.html.jinja2
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Static resources with Flask</title>
-        <link rel="stylesheet" href="{{ url_for("static", filename="css/static_resources_style.css") }}"/>
+        <link rel="stylesheet" href="{{ url_for("static", filename="css/style.css") }}"/>
     </head>
     <body>
         <img class="logo" src="{{ url_for("static", filename="img/logo.jpg") }}"/>
