first draft for a project template

--- a/templates/show_engineer.html.jinja2
+++ b/templates/show_engineer.html.jinja2
@@ -1,16 +1,16 @@
 <html>
     <head>
-        <title>Description de {{ engineer.username }}</title>
+        <title>Description de {{ engineer.nom_court }}</title>
     </head>
     <body>
-        <p>Information about "{{ engineer.username }}"</p>
+        <p>Information about "{{ engineer.nom_court }}"</p>
 
         <dl>
             <dt>id</dt>
             <dd>{{ engineer.id }}</dd>
 
             <dt>username</dt>
-            <dd>{{ engineer.username }}</dd>
+            <dd>{{ engineer.nom_court }}</dd>
 
             <dt>email</dt>
             <dd>{{ engineer.email }}</dd>
